[package]
name = "cloudi"
description = "Rust CloudI API"
version = "2.0.6"
edition = "2021"
rust-version = "1.66.1"
license = "MIT"
authors = ["Michael Truog <mjtruog@protonmail.com>"]
repository = "https://github.com/CloudI/cloudi_api_rust"
readme = "README.markdown"
keywords = ["api", "framework", "distributed"]
categories = ["api-bindings", "concurrency", "development-tools::testing"]

[dependencies]
erlang_rs = "2.0.6"
